@@ -17,6 +17,12 @@ Major changes since man-db 2.8.3:
 	* Make seccomp sandbox allow sched_getaffinity, sometimes used by
 	  xz.
 
+	* Check for mandb_nfmt and mandb_tfmt in the manual page hierarchy
+	  as documented, not in the current directory.  This was broken by
+	  the working-directory-handling changes in 2.8.3.  Note that this
+	  change means that "man -l" will never use an external formatter
+	  (which was never documented behaviour and was surely a bad idea).
+
 man-db 2.8.3 (5 April 2018)
 ===========================
 
